; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_event.c_kqueue_task.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_event.c_kqueue_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kqueue = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@kq_global = common dso_local global i32 0, align 4
@KQ_TASKSCHED = common dso_local global i32 0, align 4
@KQ_TASKDRAIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @kqueue_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kqueue_task(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.kqueue*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %6, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.kqueue*
  store %struct.kqueue* %8, %struct.kqueue** %5, align 8
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @KQ_GLOBAL_LOCK(i32* @kq_global, i32 %9)
  %11 = load %struct.kqueue*, %struct.kqueue** %5, align 8
  %12 = call i32 @KQ_LOCK(%struct.kqueue* %11)
  %13 = load %struct.kqueue*, %struct.kqueue** %5, align 8
  %14 = getelementptr inbounds %struct.kqueue, %struct.kqueue* %13, i32 0, i32 1
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = call i32 @KNOTE_LOCKED(i32* %15, i32 0)
  %17 = load i32, i32* @KQ_TASKSCHED, align 4
  %18 = xor i32 %17, -1
  %19 = load %struct.kqueue*, %struct.kqueue** %5, align 8
  %20 = getelementptr inbounds %struct.kqueue, %struct.kqueue* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = and i32 %21, %18
  store i32 %22, i32* %20, align 4
  %23 = load %struct.kqueue*, %struct.kqueue** %5, align 8
  %24 = getelementptr inbounds %struct.kqueue, %struct.kqueue* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @KQ_TASKDRAIN, align 4
  %27 = and i32 %25, %26
  %28 = load i32, i32* @KQ_TASKDRAIN, align 4
  %29 = icmp eq i32 %27, %28
  br i1 %29, label %30, label %34

30:                                               ; preds = %2
  %31 = load %struct.kqueue*, %struct.kqueue** %5, align 8
  %32 = getelementptr inbounds %struct.kqueue, %struct.kqueue* %31, i32 0, i32 0
  %33 = call i32 @wakeup(i32* %32)
  br label %34

34:                                               ; preds = %30, %2
  %35 = load %struct.kqueue*, %struct.kqueue** %5, align 8
  %36 = call i32 @KQ_UNLOCK(%struct.kqueue* %35)
  %37 = load i32, i32* %6, align 4
  %38 = call i32 @KQ_GLOBAL_UNLOCK(i32* @kq_global, i32 %37)
  ret void
}

declare dso_local i32 @KQ_GLOBAL_LOCK(i32*, i32) #1

declare dso_local i32 @KQ_LOCK(%struct.kqueue*) #1

declare dso_local i32 @KNOTE_LOCKED(i32*, i32) #1

declare dso_local i32 @wakeup(i32*) #1

declare dso_local i32 @KQ_UNLOCK(%struct.kqueue*) #1

declare dso_local i32 @KQ_GLOBAL_UNLOCK(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
